--- a/主要函数.md
+++ b/主要函数.md
@@ -3,7 +3,7 @@
 ```
 int socket_bind_listen();
 ```
-返回：监听套接字描述符
+返回值：监听套接字描述符
 # epoll.c
 ##### 增加epoll事件
 ```
@@ -46,3 +46,53 @@ void handle_event(int epollfd, struct thread_pool_info* tp, int nums, int listen
 3) nums：epoll_wait()返回的epoll事件数量
 4) listenfd：监听套接字描述符
 5) events：epoll事件数组
+
+# thread.c
+##### 线程池初始化
+```
+struct thread_pool_info* init_thread_pool(int thread_num);
+```
+返回值：已初始化的线程池  
+参数：  
+thread_num：线程池中线程数量
+##### 销毁线程池
+```
+void destroy_thread_pool(struct thread_pool_info* pool);
+```
+参数：  
+pool：线程池  
+##### 销毁线程池中任务节点
+```
+static void destroy_task_node(struct thread_pool_info* pool);
+```
+参数：  
+pool：线程池
+##### 向线程池中添加任务
+```
+void thread_pool_add_task(struct thread_pool_info* pool, struct task_para* arg, void (*func)(struct task_para*));
+```
+参数：  
+1) pool：线程池  
+2) arg：执行任务的函数的参数  
+3) func：执行任务的函数
+##### 线程工作函数
+```
+void* thread_pool_work(void* arg);
+```
+参数：  
+arg：线程池
+
+# response.c
+##### 接受连接
+```
+void accept_connection(int epollfd, int listenfd);
+```
+参数：  
+1) epollfd：epoll描述符  
+2) listenfd：监听套接字描述符
+##### 任务执行函数
+```
+void do_request(struct task_para* arg);
+```
+参数：  
+arg：任务参数
