--- a/主要函数.md
+++ b/主要函数.md
@@ -4,8 +4,16 @@
 int socket_bind_listen();
 ```
 返回值：监听套接字描述符
+##### 将套接字设置为非阻塞
+```
+int make_socket_nonblock(int sockfd);
+```
+##### 处理sigpipe信号
+```
+void handle_sigpipe();
+```
 # epoll.c
-##### 增加epoll事件
+##### 向epoll增加事件
 ```
 void epoll_add(int epollfd, int fd, int state);
 ```
@@ -13,7 +21,7 @@ void epoll_add(int epollfd, int fd, int state);
 1) epollfd：epoll描述符
 2) fd：套接字描述符
 3) state：事件状态(EPOLLIN、EPOLLOUT、EPOLLET)
-##### 删除epoll事件
+##### 向epoll删除事件
 ```
 void epoll_del(int epollfd, int fd, int state);
 ```
@@ -21,7 +29,7 @@ void epoll_del(int epollfd, int fd, int state);
 1) epollfd：epoll描述符
 2) fd：套接字描述符
 3) state：事件状态(EPOLLIN、EPOLLOUT、EPOLLET)
-##### 修改epoll事件
+##### 修改epoll中的事件
 ```
 void epoll_mod(int epollfd, int fd, int state);
 ```
@@ -29,28 +37,28 @@ void epoll_mod(int epollfd, int fd, int state);
 1) epollfd：epoll描述符
 2) fd：套接字描述符
 3) state：事件状态(EPOLLIN、EPOLLOUT、EPOLLET)
-##### 开始执行epoll
+##### 创建epoll描述符，并等待事件发生
 ```
-void do_epoll(int listenfd, struct thread_pool_info* tp);
+void do_epoll(int listenfd, struct thread_pool_info* pool);
 ```
 参数：
 1) listenfd：监听套接字描述符
-2) tp：已创建并初始化的线程池
-##### 分发处理事件
+2) pool：已创建并初始化的线程池
+##### 任务分发函数
 ```
-void handle_event(int epollfd, struct thread_pool_info* tp, int nums, int listenfd, struct epoll_events* events);
+void handle_event(int epollfd, struct epoll_event* events, int num, int listenfd, struct thread_pool_info* pool);
 ```
 参数：
 1) epollfd：epoll描述符
-2) tp：已创建并初始化的线程池
-3) nums：epoll_wait()返回的epoll事件数量
+2) pool：已创建并初始化的线程池
+3) num：epoll_wait()返回的epoll事件数量
 4) listenfd：监听套接字描述符
 5) events：epoll事件数组
 
 # thread.c
-##### 线程池初始化
+##### 创建并初始化线程池
 ```
-struct thread_pool_info* init_thread_pool(int thread_num);
+struct thread_pool_info* init_thread_pool(int thread_num = THREAD_NUM);
 ```
 返回值：已初始化的线程池  
 参数：  
@@ -61,12 +69,6 @@ void destroy_thread_pool(struct thread_pool_info* pool);
 ```
 参数：  
 pool：线程池  
-##### 销毁线程池中任务节点
-```
-static void destroy_task_node(struct thread_pool_info* pool);
-```
-参数：  
-pool：线程池
 ##### 向线程池中添加任务
 ```
 void thread_pool_add_task(struct thread_pool_info* pool, struct task_para* arg, void (*func)(struct task_para*));
@@ -82,10 +84,10 @@ void* thread_pool_work(void* arg);
 参数：  
 arg：线程池
 
-# response.c
+# request_and_response.c
 ##### 接受连接
 ```
-void accept_connection(int epollfd, int listenfd);
+int accept_connection(int epollfd, int listenfd);
 ```
 参数：  
 1) epollfd：epoll描述符  
@@ -96,3 +98,82 @@ void do_request(struct task_para* arg);
 ```
 参数：  
 arg：任务参数
+##### 从已连接套接字接收请求报文
+```
+char* receive_request_from_client(int connfd, int epollfd);
+```
+参数：  
+1) connfd：已连接套接字  
+2) epollfd：epoll描述符  
+##### 发送静态文件
+```
+void serve_static_text_file(char* path, int connfd, struct http_request_info* keyinfo);
+```
+参数：  
+1) path：静态文件绝对路径  
+2) connfd：已连接套接字   
+3) keyinfo：请求报文结构体  
+##### 判断请求是否合法
+```
+bool is_request_legal(int connfd, struct http_request_info* keyinfo);
+```
+参数
+1) connfd：已连接套接字
+2) keyinfo：http请求报文结构体
+##### 从缓冲区中获取首部字段
+```
+int get_header_field_from_buffer(int start, char* buf, char* tempbuf);
+```
+参数：  
+1) start：缓冲区开始位置  
+2) buf：缓冲区  
+3) tempbuf：首部字段存储数组  
+
+# status_code.c
+##### 返回状态码200
+```
+void header_200_OK(int connfd, struct http_request_info* keyinfo);
+```
+##### 返回状态码404
+```
+void header_404_Not_Found(int connfd);
+```
+##### 返回状态码400
+```
+void header_400_Bad_Request(int connfd);
+```
+##### 返回状态码501
+```
+void header_501_Not_Implemented(int connfd);
+```
+
+# parse_http_request.c
+##### 设置文件类型
+```
+void set_file_type(char* path, struct http_request_info* keyinfo);
+```
+参数：  
+1) path：文件路径    
+2) keyinfo：请求报文结构体  
+##### 从url获得文件路径
+```
+void parse_url(char* url, struct http_request_info* keyinfo);
+```
+参数：  
+1) url：存储url的数组  
+2) keyinfo：请求报文结构体  
+##### 按行解析请求报文
+```
+int parse_request_line(char* buffer, struct http_request_info* keyinfo);
+```
+参数：  
+1) buffer：缓冲区  
+2) keyinfo：请求报文结构体  
+##### 解析首部字段
+```
+void parse_header_field(char* buffer, int start, struct http_request_info* keyinfo);
+```
+参数：
+1) buffer：缓冲区  
+2) start：缓冲区开始位置  
+3) keyinfo：请求报文结构体  
